--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@
      </div>
       <div id="elementos-carrito" >
       </div>
-    </div>
       <div id="importeCarrito">
-
-      </div> 
+        <h3 class="d-inline">Importe total:
+          <h4 id="h4-importe" class="d-inline">
   
-   
+          </h4>
+      </h3>
+      </div>
+    </div>
+     
   </section>
 
     <section id="carousel" class="carousel slide" data-ride="carousel">
@@ -101,7 +104,7 @@
               <img src="/ProyectoFinal/images/10.jpg" class="d-block img-fluid" >
             </div>
             <div class="carousel-item">
-              <img src="/ProyectoFinal/images/8.jpg" class="d-block img-fluid">
+              <img src="/ProyectoFinal/images/9.jpg" class="d-block img-fluid">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
