pwd corregidos HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, initial-scale=1.0">
-    <link rel="shortcut icon" href="/ProyectoFinal/images/pngegg (2).png">
+    <link rel="shortcut icon" href="./images/pngegg (2).png">
     <title>ArgenShop - Camisetas de fútbol</title>
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -11,9 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100&display=swap" rel="stylesheet">
     <!-- BOOTSTRAP 4 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="/ProyectoFinal/css/main.css">
-    <script src="/ProyectoFinal/js/data.js"></script>
-    <script src="/ProyectoFinal/js/clases.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/data.js"></script>
+    <script src="./js/clases.js"></script>
+
 </head>
 <body>
 
@@ -22,7 +23,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
           <div>
             <a class="navbar-brand" href="#">
-                <img src="/ProyectoFinal/images/pngegg.png" height="40" class="mr-2">
+                <img src="./images/pngegg.png" height="40" class="mr-2">
                 ArgenShop
              </a>
           </div>
@@ -98,13 +99,13 @@
           <div class="carousel-inner">
             
             <div class="carousel-item active">
-              <img src="/ProyectoFinal/images/1.jpg" class="d-block img-fluid img-1">
+              <img src="./images/1.jpg" class="d-block img-fluid img-1">
             </div>
             <div class="carousel-item">
-              <img src="/ProyectoFinal/images/6.jpg" class="d-block img-fluid" >
+              <img src="./images/6.jpg" class="d-block img-fluid" >
             </div>
             <div class="carousel-item">
-              <img src="/ProyectoFinal/images/11.jpg" class="d-block img-fluid">
+              <img src="./images/11.jpg" class="d-block img-fluid">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -158,12 +159,12 @@
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
                         <div id="argentina" class="contenedor m-auto">
-                           <a href="#camisetas"><img src="/ProyectoFinal/images/paises/Argentina.png" class="img-fluid" alt=""></a>
+                           <a href="#camisetas"><img src="./images/paises/Argentina.png" class="img-fluid" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xs-12">
                       <div id="italia" class="contenedor m-auto">
-                          <a href="#camisetas"><img src="/ProyectoFinal/images/paises/italy.png" class="img-fluid" alt=""></a>
+                          <a href="#camisetas"><img src="./images/paises/italy.png" class="img-fluid" alt=""></a>
                          
                         </div>
                     </div>
@@ -171,12 +172,12 @@
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
                       <div id="brasil" class="contenedor m-auto">
-                          <a href="#camisetas"><img src="/ProyectoFinal/images/paises/brasil.png" class="img-fluid" alt=""></a>
+                          <a href="#camisetas"><img src="./images/paises/brasil.png" class="img-fluid" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xs-12">
                       <div id="españa" class="contenedor m-auto">
-                        <a href="#camisetas"><img src="/ProyectoFinal/images/paises/spain.png" class="img-fluid" alt=""></a>
+                        <a href="#camisetas"><img src="./images/paises/spain.png" class="img-fluid" alt=""></a>
                         </div>
                     </div>
                 </div>
