correcciones responsive + pwd

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         
     <section id="search" class="mt-5">
       <form class="form-inline my-2 my-lg-0">
-        <div class="mr-auto ml-auto col-8 d-flex justify-content-center">
-          <input id="input-search" class="form-control col-5" type="search" placeholder="Busque la camiseta deseada">
+        <div class="mr-auto ml-auto col-11 d-flex justify-content-center">
+          <input id="input-search" class="form-control col-5 my-2 my-sm-0 mr-1" type="search" placeholder="Busque la camiseta deseada">
           <button id="submit-search" class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </div>
       </form>
@@ -198,7 +198,7 @@
 
       <section id="contacto" class="my-5 container-fluid pb-5">
         <div class="row d-flex flex-nowrap align-content-center justify-content-center container-fluid h-100">
-          <div class="col-8 w-100 h-100">
+          <div class="col-10 w-100 h-100">
             <form id="form" class="w-100">
               <div class="card border-dark rounded-0 h-100">
                   <div class="card-header p-0">
