--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
       <button id="buttonCountries" class="btn-lg btn-dark mb-3 btn-block">Seleccionar por paises</button>
       <article id="showAllShirts" style="display:none">
         <div class="form-group d-flex justify-content-center align-items-center mr-auto ml-auto col-md-10 col-sm-12" id="form-sort">
-         <label class="mr-2 text-center col-sm-6 col-md-4">Ordenar por</label>
+         <label class="mr-2 text-right col-sm-6 col-md-4">Ordenar por</label>
           <select class="form-control col-sm-6" id="sort">
               <option hidden selected>Seleccione un orden</option>
-              <option value='1'>Orden alfabético Ascendente</option>
-              <option value='2'>Orden alfabético Descendente</option>
-              <option value='3'>Menor Precio</option>
-              <option value='4'>Mayor Precio</option>
+              <option value='1'>Orden alfabético ascendente</option>
+              <option value='2'>Orden alfabético descendente</option>
+              <option value='3'>Menor precio</option>
+              <option value='4'>Mayor precio</option>
           </select>
         </div>
         <div id="listShirts"></div>
